--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Code Mania 110</title>
+  <title>HelloWorld Code Mania 110</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -47,7 +47,7 @@
     <li class="session-time">00:00 - 00:00</li>
     <li class="session-item">
       <em class="session-item__speaker">Speaker 1</em>
-      <h3 class="session-item__title">Session 1</h3>
+      <h3 class="session-item__title">Speaker 1</h3>
       <p class="session-item__description">Description 1</p>
     </li>
 
